--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -1,6 +1,6 @@
 .grid{
-    height: 400px;
-    width: 400px;
+    height: 600px;
+    width: 600px;
     display: flex;
     flex-wrap: wrap;
     background-color: gray;
@@ -9,5 +9,16 @@
 .grid div{
     height: 40px;
     width: 40px;
+}
 
+.red {
+    background-color: red;
+    border-radius: 50%;
+    display: inline-block;
+}
+
+.blue {
+    background-color: blue;
+    border-radius: 50%;
+    display: inline-block;
 }
